--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,47 +1,40 @@
 <header class="header">
   <div class="container">
     <nav class="header-nav">
+
       <!-- ЛОГОТИП -->
       <div class="nav-logo">
         <a href="/green-frog">
-          <span class="logo-green-span">GreenFrog</span
-          ><span class="logo-span">Office</span>
+          <span class="logo-green-span">GreenFrog</span><span class="logo-span">Office</span>
         </a>
-      </div>
+      </div>          
 
-      <div class="page-nav">
-        <ul class="header-nav-list">
-          <li class="nav-item">
-            <a href="#about" class="nav-link" data-i18n="nav.services"
-              >Services</a
-            >
-          </li>
-          <li class="nav-item">
-            <!-- <a href="#reviews" class="nav-link">Reviews</a> -->
-            <a href="#reviews" class="nav-link" data-i18n="nav.reviews"
-              >Reviews</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="#application-form" class="nav-link" data-i18n="nav.contact"
-              >Contact us</a
-            >
-          </li>
-        </ul>
-      </div>
+        
 
-      <!-- Языковые кнопки -->
-      <div class="lang-switch">
-        <button class="lang-btn" data-lang="en" onclick="setActiveLang('en')">
-          EN
-        </button>
-        <button class="lang-btn" data-lang="ru" onclick="setActiveLang('ru')">
-          RU
-        </button>
-        <button class="lang-btn" data-lang="ua" onclick="setActiveLang('ua')">
-          UA
-        </button>
-      </div>
-    </nav>
+         <div class="page-nav"> 
+          <ul class="header-nav-list">
+            <li class="nav-item">
+              <a href="#about" class="nav-link">Services</a>
+            </li>            
+            <li class="nav-item">
+              <a href="#reviews" class="nav-link">Reviews</a>
+            </li>
+            <li class="nav-item">
+              <a href="#application-form" class="nav-link">Contact us</a>
+            </li>
+          </ul>
+         </div>
+        
+          <!-- Языковые кнопки -->
+          <div class="lang-switch">
+            <button type="button" class="lang-btn" data-lang="en" onclick="setActiveLang('en')">EN</button>
+            <button type="button" class="lang-btn" data-lang="ru" onclick="setActiveLang('ru')">RU</button>
+            <button type="button" class="lang-btn" data-lang="ua" onclick="setActiveLang('ua')">UA</button>
+          </div>
+        
+   
+      </nav>
+
   </div>
 </header>
+
