--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="section section-reviews animated" id="reviews">
   <div class="container">
-    <h2 class="section-title">Summary <span>information</span> say</h2>
+    <h2 class="section-title">Overview <span> of </span> Topics </h2>
     <p class="section-subtitle">
       We provide clear and structured support at every stage of our cooperation.
       Below you will find essential information about how we communicate, formalize agreements,
