--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -26,12 +26,14 @@
   transition: transform var(--common-transition);
 }
 
+
 .review-item {
   border-radius: 30px;
   background: rgb(238, 237, 237);
   padding: 20px 20px 40px 20px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 12px 28px rgba(35, 88, 6, 0.18);
 
   @media screen and (min-width: 768px) {
     padding: 32px 16px;
