--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -2,10 +2,14 @@
 <section id="proposal" class="section proposal-section">
   <div class="container">
     <div class="proposal-container">
-      <h2 class="visually-hidden">Proposal to leave an application</h2>
-      <p class="title">
+      <h2 class="visually-hidden" data-i18n="proposal_hidden_title">
+        Proposal to leave an application
+      </h2>
+
+      <p class="title" data-i18n="proposal_title">
         Extended <span class="title-language">Service</span> Package
       </p>
+
       <div class="proposal-inner">
         <div class="proposal-wrapper">
           <ul class="proposal-list">
@@ -15,10 +19,11 @@
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text">
+              <p class="proposal-item-text" data-i18n="proposal_item_apostille">
                 Document Apostille of personal and corporate documents for
                 official use in the Czech Republic and abroad.
               </p>
+
             </li>
             <li class="proposal-item">
               <div class="icon-wrapper">
@@ -26,11 +31,12 @@
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text">
+              <p class="proposal-item-text" data-i18n="proposal_item_databox">
                 Datová schránka Setup Application preparation and full
                 assistance in opening a datová schránka, including client
                 presence.
               </p>
+
             </li>
             <li class="proposal-item">
               <div class="icon-wrapper">
@@ -38,10 +44,11 @@
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text">
+              <p class="proposal-item-text" data-i18n="proposal_item_bank">
                 Bank Account Opening Support with opening personal and corporate
                 bank accounts in Czech banks, with required client presence.
               </p>
+
             </li>
             <li class="proposal-item">
               <div class="icon-wrapper">
@@ -49,15 +56,18 @@
                   <use href="/img/icons.svg#icon-check"></use>
                 </svg>
               </div>
-              <p class="proposal-item-text">
+              <p class="proposal-item-text" data-i18n="proposal_item_power">
                 Service Power of Attorney Preparation of a power of attorney for
                 full service support, notarized at the client’s consulate if
                 required.
               </p>
+
             </li>
           </ul>
-          <a href="#application-form" class="button proposal-button"
-            >Leave an application</a
+          <a href="#application-form" class="button proposal-button" data-i18n="proposal_button">
+            Leave an application
+          </a>
+
           >
           <div class="books-image-wrapper">
             <picture>
