--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,39 +2,45 @@
   <div class="container">
     <nav class="header-nav">
 
-      <!-- ЛОГОТИП -->
+      <!-- ЛОГОТИП (НЕ переводим) -->
       <div class="nav-logo">
         <a href="/green-frog">
           <span class="logo-green-span">GreenFrog</span><span class="logo-span">Office</span>
         </a>
-      </div>          
+      </div>
 
-        
+      <div class="page-nav">
+        <ul class="header-nav-list">
 
-         <div class="page-nav"> 
-          <ul class="header-nav-list">
-            <li class="nav-item">
-              <a href="#about" class="nav-link">Services</a>
-            </li>            
-            <li class="nav-item">
-              <a href="#reviews" class="nav-link">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a href="#application-form" class="nav-link">Contact us</a>
-            </li>
-          </ul>
-         </div>
-        
-          <!-- Языковые кнопки -->
-          <div class="lang-switch">
-            <button type="button" class="lang-btn" data-lang="en" onclick="setActiveLang('en')">EN</button>
-            <button type="button" class="lang-btn" data-lang="ru" onclick="setActiveLang('ru')">RU</button>
-            <button type="button" class="lang-btn" data-lang="ua" onclick="setActiveLang('ua')">UA</button>
-          </div>
-        
-   
-      </nav>
+          <li class="nav-item">
+            <a href="#about" class="nav-link" data-i18n="nav_services">
+              Services
+            </a>
+          </li>
 
+          <li class="nav-item">
+            <a href="#reviews" class="nav-link" data-i18n="nav_reviews">
+              Reviews
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#application-form" class="nav-link" data-i18n="nav_contact">
+              Contact us
+            </a>
+          </li>
+
+        </ul>
+      </div>
+      <div class="lang-switcher">
+        <button type="button" data-lang="en" class="lang-btn">EN</button>
+        <button type="button" data-lang="ru" class="lang-btn">RU</button>
+        <button type="button" data-lang="uk" class="lang-btn">UA</button>
+      </div>
+
+
+    </nav>
   </div>
 </header>
+
 
