--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -1,39 +1,57 @@
 <section id="application-form" class="section">
   <div class="container">
-    <h2 class="section-title">Leave an application</h2>
+    <h2 class="section-title" data-i18n="form_title">
+      Leave an application
+    </h2>
+
     <div class="form-img-container">
-      <p class="leave-item-text-up">
+      <p class="leave-item-text-up" data-i18n="form_description">
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
       </p>
 
+
       <form class="leave-form" action="#">
         <div class="form-container">
-          <label class="visually-hidden" for="user-name">Name</label>
+          <label class="visually-hidden" for="user-name" data-i18n="form_name_label">Name</label>
           <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Name"
-            pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$" title="Мінімум 2 літери, тільки букви та пробіли" required />
+            data-i18n-placeholder="form_name_placeholder" pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$"
+            title="Мінімум 2 літери, тільки букви та пробіли" required />
+
         </div>
         <div class="form-container">
-          <label class="visually-hidden" for="phone">Phone</label>
+          <label class="visually-hidden" for="phone" data-i18n="form_phone_label">Phone</label>
           <input class="form-input" type="tel" name="phone" id="phone" placeholder="Phone"
-            pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$" title="Формат: +38 (0XX) XXX-XX-XX" required />
+            data-i18n-placeholder="form_phone_placeholder" pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$"
+            title="Формат: +38 (0XX) XXX-XX-XX" required />
+
         </div>
         <div class="form-container">
-          <label class="visually-hidden" for="mail">Email</label>
+          <label class="visually-hidden" for="mail" data-i18n="form_email_label">Email</label>
           <input class="form-input" type="email" name="mail" id="mail" placeholder="Email"
-            pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$" title="Введіть правильний email" required />
+            data-i18n-placeholder="form_email_placeholder" pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$" title="Введіть правильний email"
+            required />
+
         </div>
         <div class="textarea-container">
-          <label class="visually-hidden" for="user-comment">Comment</label>
-          <textarea name="user-comment" class="form-textarea" id="user-comment" rows="10"
-            placeholder="Comment"></textarea>
+          <label class="visually-hidden" for="user-comment" data-i18n="form_comment_label">Comment</label>
+          <textarea name="user-comment" class="form-textarea" id="user-comment" rows="10" placeholder="Comment"
+            data-i18n-placeholder="form_comment_placeholder">
+          </textarea>
+
         </div>
-        <button type="submit" class="button -button">Send</button>
-        <p class="leave-item-text-down">
+      <button type="submit" class="button -button" data-i18n="form_submit">
+        Send
+      </button>
+
+        <p class="leave-item-text-down" data-i18n="form_privacy_text">
           By clicking on “Send” button, you agree to our
-          <a class="text-link leave-item-link-text-down" href="/privacy-policy" target="_blank">Privacy
-            Policy,</a><br>and allow Promodo to use this information for marketing purposes.
+          <a class="text-link leave-item-link-text-down" href="/privacy-policy" target="_blank">
+            Privacy Policy
+          </a>
+          and allow us to use this information for marketing purposes.
         </p>
+
       </form>
     </div>
   </div>
