--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -68,7 +68,7 @@
       <p class="footer-copyright">
         GreenFrogOffice.<br>All rights reserved.
       </p>
-      <ul class="footer-legal">
+      <!-- <ul class="footer-legal">
         <li class="footer-legal-item">
           <a class="footer-legal-link" href="/privacy-policy" target="_blank" rel="noopener noreferrer"
             data-i18n="footer_privacy">
@@ -82,7 +82,7 @@
         </a>
 
         </li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 </footer>
