--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -30,6 +30,16 @@
               </a>
             </address>
           </li>
+          <li>
+            <p class="footer-contacts-label" data-i18n="footer_email_label">
+              Email:
+            </p>
+          
+            <a class="footer-phone" href="mailto:greenfrog.office@email.cz">
+              greenfrog.office@email.cz
+            </a>
+          </li>
+
         </ul>
       </div>
 
