--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,7 @@
         <!-- Логотип -->
         <div class="footer-logo">
           <a class="footer-logo-link" href="/green-frog">
-            GreenFrog<span class="logo-span">Office</span>.
+            GreenFrog<span class="logo-span">Office</span>
           </a>
         </div>
 
