--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -10,39 +10,100 @@
         message and we'll get back to you shortly.
       </p>
 
-
-      <form class="leave-form" action="#">
+      <form id="contact-form" class="leave-form">
         <div class="form-container">
           <label class="visually-hidden" for="user-name" data-i18n="form_name_label">Name</label>
-          <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Name"
-            data-i18n-placeholder="form_name_placeholder" pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$"
-            title="Мінімум 2 літери, тільки букви та пробіли" required />
-
+          <input class="form-input" type="text" id="user-name" name="user_name" placeholder="Name"
+            data-i18n-placeholder="form_name_placeholder" required />
         </div>
+      
         <div class="form-container">
           <label class="visually-hidden" for="phone" data-i18n="form_phone_label">Phone</label>
-          <input class="form-input" type="tel" name="phone" id="phone" placeholder="Phone"
-            data-i18n-placeholder="form_phone_placeholder" pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$"
-            title="Формат: +38 (0XX) XXX-XX-XX" required />
-
+          <input class="form-input" type="tel" id="phone" name="user_phone" placeholder="Phone"
+            data-i18n-placeholder="form_phone_placeholder" required />
         </div>
+      
         <div class="form-container">
           <label class="visually-hidden" for="mail" data-i18n="form_email_label">Email</label>
-          <input class="form-input" type="email" name="mail" id="mail" placeholder="Email"
-            data-i18n-placeholder="form_email_placeholder" pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$" title="Введіть правильний email"
-            required />
-
+          <input class="form-input" type="email" id="mail" name="user_email" placeholder="Email"
+            data-i18n-placeholder="form_email_placeholder" required />
         </div>
+      
         <div class="textarea-container">
           <label class="visually-hidden" for="user-comment" data-i18n="form_comment_label">Comment</label>
-          <textarea name="user-comment" class="form-textarea" id="user-comment" rows="10" placeholder="Comment"
-            data-i18n-placeholder="form_comment_placeholder">
-          </textarea>
-
+          <textarea class="form-textarea" id="user-comment" name="message" rows="10" placeholder="Comment"
+            data-i18n-placeholder="form_comment_placeholder" required></textarea>
         </div>
-      <button type="submit" class="button -button" data-i18n="form_submit">
-        Send
-      </button>
+      
+        <button type="submit" class="button -button" data-i18n="form_submit">
+          Send
+        </button>
+      
+        <p class="leave-item-text-down" data-i18n="form_privacy_text"></p>
+      </form>
+
+
+
+      <!-- <form id="contact-form" class="leave-form">
+  <div class="form-container">
+    <label class="visually-hidden" for="user-name" data-i18n="form_name_label">Name</label>
+    <input
+      class="form-input"
+      type="text"
+      id="user-name"
+      name="user_name"
+      placeholder="Name"
+      data-i18n-placeholder="form_name_placeholder"
+      required
+    />
+  </div>
+
+  <div class="form-container">
+    <label class="visually-hidden" for="phone" data-i18n="form_phone_label">Phone</label>
+    <input
+      class="form-input"
+      type="tel"
+      id="phone"
+      name="user_phone"
+      placeholder="Phone"
+      data-i18n-placeholder="form_phone_placeholder"
+      required
+    />
+  </div>
+
+  <div class="form-container">
+    <label class="visually-hidden" for="mail" data-i18n="form_email_label">Email</label>
+    <input
+      class="form-input"
+      type="email"
+      id="mail"
+      name="user_email"
+      placeholder="Email"
+      data-i18n-placeholder="form_email_placeholder"
+      required
+    />
+  </div>
+
+  <div class="textarea-container">
+    <label class="visually-hidden" for="user-comment" data-i18n="form_comment_label">Comment</label>
+    <textarea
+      class="form-textarea"
+      id="user-comment"
+      name="message"
+      rows="10"
+      placeholder="Comment"
+      data-i18n-placeholder="form_comment_placeholder"
+      required
+    ></textarea>
+  </div>
+
+  <button type="submit" class="button -button" data-i18n="form_submit">
+    Send
+  </button>
+
+  <p class="leave-item-text-down" data-i18n="form_privacy_text"></p>
+</form> -->
+
 
         <p class="leave-item-text-down"
   data-i18n="form_privacy_text">></p>
