--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -12,35 +12,26 @@
 
       <form id="contact-form" class="leave-form">
         <div class="form-container">
-          <label class="visually-hidden" for="user-name" data-i18n="form_name_label">Name</label>
-          <input class="form-input" type="text" id="user-name" name="user_name" placeholder="Name"
-            data-i18n-placeholder="form_name_placeholder" required />
+          <input class="form-input" type="text" name="user_name" placeholder="Name" required />
         </div>
       
         <div class="form-container">
-          <label class="visually-hidden" for="phone" data-i18n="form_phone_label">Phone</label>
-          <input class="form-input" type="tel" id="phone" name="user_phone" placeholder="Phone"
-            data-i18n-placeholder="form_phone_placeholder" required />
+          <input class="form-input" type="tel" name="user_phone" placeholder="Phone" required />
         </div>
       
         <div class="form-container">
-          <label class="visually-hidden" for="mail" data-i18n="form_email_label">Email</label>
-          <input class="form-input" type="email" id="mail" name="user_email" placeholder="Email"
-            data-i18n-placeholder="form_email_placeholder" required />
+          <input class="form-input" type="email" name="user_email" placeholder="Email" required />
         </div>
       
         <div class="textarea-container">
-          <label class="visually-hidden" for="user-comment" data-i18n="form_comment_label">Comment</label>
-          <textarea class="form-textarea" id="user-comment" name="message" rows="10" placeholder="Comment"
-            data-i18n-placeholder="form_comment_placeholder" required></textarea>
+          <textarea class="form-textarea" name="message" rows="6" placeholder="Comment" required></textarea>
         </div>
       
-        <button type="submit" class="button -button" data-i18n="form_submit">
+        <button type="submit" class="button">
           Send
         </button>
-      
-        <p class="leave-item-text-down" data-i18n="form_privacy_text"></p>
       </form>
+
 
 
 
