--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -10,29 +10,39 @@
         message and we'll get back to you shortly.
       </p>
 
-      <form id="contact-form" class="leave-form">
+      <form id="contact-form" class="leave-form" novalidate>
+      <input type="text" name="company" tabindex="-1" autocomplete="off" style="position:absolute; left:-9999px;" />
 
-
+      
         <div class="form-container">
-          <input class="form-input" type="text" name="user_name" placeholder="Name" required />
+          <label class="visually-hidden" for="user_name">Name</label>
+          <input id="user_name" class="form-input" type="text" name="user_name" placeholder="Name" autocomplete="name"
+            required />
         </div>
       
         <div class="form-container">
-          <input class="form-input" type="tel" name="user_phone" placeholder="Phone" required />
+          <label class="visually-hidden" for="user_phone">Phone</label>
+          <input id="user_phone" class="form-input" type="tel" name="user_phone" placeholder="Phone" autocomplete="tel"
+            required />
         </div>
       
         <div class="form-container">
-          <input class="form-input" type="email" name="user_email" placeholder="Email" required />
+          <label class="visually-hidden" for="user_email">Email</label>
+          <input id="user_email" class="form-input" type="email" name="user_email" placeholder="Email" autocomplete="email"
+            required />
         </div>
       
         <div class="textarea-container">
-          <textarea class="form-textarea" name="message" rows="6" placeholder="Comment" required></textarea>
+          <label class="visually-hidden" for="message">Comment</label>
+          <textarea id="message" class="form-textarea" name="message" rows="6" placeholder="Comment" required></textarea>
         </div>
       
         <button type="submit" class="button">
           Send
         </button>
+      
       </form>
+      <input type="text" name="company" style="display:none">
 
 
 
