--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,10 @@
 
 <section id="hero" class="hero-section">
   <div class="container hero-content">
-  <h1 class="hero-text animated" data-i18n="hero_title">
+  <h1 class="hero-text animated" data-i18n-html="hero_title">
     Services in the <span class="hero-english">Czech</span> Republic!
   </h1>
+
 
 
     <a href="#application-form" class="button hero-button animated" data-i18n="hero_button">
