--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -61,7 +61,7 @@
       
 
         <p class="leave-item-text-down"
-  data-i18n="form_privacy_text">></p>
+  data-i18n="form_privacy_text"></p>
 
           By clicking on "Send" button, you agree to our
           <a class="text-link leave-item-link-text-down" href="/privacy-policy" target="_blank">
