--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -53,14 +53,14 @@
       </button>
     
       <!-- ⚠️ текст БЕЗ HTML -->
-      <p class="leave-item-text-down" data-i18n="form_privacy_text"></p>
+      <p class="leave-item-text-down" data-i18n-html="form_privacy_text"></p>
     
     </form>
 
 
       
 
-        <p class="leave-item-text-down"
+        <!-- <p class="leave-item-text-down"
   data-i18n="form_privacy_text"></p>
 
           By clicking on "Send" button, you agree to our
@@ -68,7 +68,7 @@
             Privacy Policy
           </a>
           and allow us to use this information for marketing purposes.
-        </p>
+        </p> -->
 
       </form>
     </div>
