--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -2,13 +2,15 @@
 <section id="proposal" class="section proposal-section">
   <div class="container">
     <div class="proposal-container">
+
       <h2 class="visually-hidden" data-i18n="proposal_hidden_title">
         Proposal to leave an application
-      </h2>
+      </h2> 
 
-      <p class="title" data-i18n="proposal_title">
+      <p class="title" data-i18n-html="proposal_title">
         Extended <span class="title-language">Service</span> Package
       </p>
+      <!-- <h1 class="hero-text" data-i18n-html="hero_title"></h1> -->
 
       <div class="proposal-inner">
         <div class="proposal-wrapper">
