--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,8 +1,9 @@
 <section class="section section-reviews animated" id="reviews">
   <div class="container">
-    <h2 class="section-title" data-i18n="reviews_title">
+    <h2 class="section-title" data-i18n-html="reviews_title">
       Overview <span> of </span> Topics
     </h2>
+    
 
     <p class="section-subtitle" data-i18n="reviews_subtitle">
       We provide clear and structured support at every stage of our cooperation.
