--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,9 +1,12 @@
 
 <section id="hero" class="hero-section">
   <div class="container hero-content">
-  <h1 class="hero-text animated" data-i18n-html="hero_title">
+    <h1 class="hero-text" data-i18n-html="hero_title"></h1>
+
+
+  <!-- <h1 class="hero-text animated" data-i18n-html="hero_title">
     Services in the <span class="hero-english">Czech</span> Republic!
-  </h1>
+  </h1> -->
 
 
 
